--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html, body{
 }
 
 body{
-    background-color: cadetblue;
+    background-color: navy;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,5 +19,6 @@ body{
 
 h1{
     font-size: 25px;
-    
+    color: whitesmoke;
+
 }
